# HighPerformanceVoxelEngine

./: CMakeLists.txt  HVE_v5_NATUR_HIMMEL_GUIDE.md  START_HVE_BALANCED.bat  batch_smoke_out.txt  bindless_blacklist.txt  build_app_log.txt  build_config_log.txt  build_ecs_log.txt  build_error_app_fix.txt  build_error_current.txt  build_error_final_compat.txt  build_error_fortified.txt  build_error_manual_glm.txt  build_error_renderer.txt  build_error_shader.txt  build_final.txt  build_fresh_log.txt  build_fresh_log_2.txt  build_glad_error.txt  build_link_log.txt  build_mesh_fix.txt  build_output.txt  build_refactor_2.txt  build_refactor_3.txt  build_refactor_log.txt  build_release_safe.ps1  probe_out.txt  run1_err.txt  run_profile_aggressive.ps1  run_profile_balanced.ps1  run_profile_biome_farfield.ps1  run_profile_conservative.ps1  run_profile_million_2min.ps1  run_profile_minecraft.ps1  run_profile_vega_ascension.ps1  spamtest_out.txt
.github/: copilot-instructions.md
assets/shaders/: chunk_frag.glsl  chunk_frag_bindless.glsl  chunk_vert.glsl  erosion.comp  world_sky.frag  world_sky.vert
docs/: ARCHITECTURE_LOGIC.md  GITHUB_AGENT_TASKS.md  MILLION_2MIN_HANDOFF.md  README.md  WALK_SPAWN_PROFILES.md
minecraft/texts/: end.txt  splashes.txt
src/: main.cpp
src/Compat/: MemsetCompat.cpp
src/Engine/Core/: Application.cpp  Application.h  GameTime.cpp  GameTime.h  HardwareDetector.cpp  HardwareDetector.h  Input.cpp  Input.h  Log.h  QualityManager.cpp  QualityManager.h  RunLog.cpp  RunLog.h  Telemetry.cpp  Telemetry.h  TimeSlicedJobSystem.cpp  TimeSlicedJobSystem.h  Window.cpp  Window.h
src/Engine/ECS/: Registry.h
src/Engine/Renderer/: BindlessTextures.cpp  BindlessTextures.h  Camera.cpp  Camera.h  IndirectBuffer.cpp  IndirectBuffer.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TextureArray.cpp  TextureArray.h  WorldRenderer.cpp  WorldRenderer.h
src/Game/World/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  Generation.cpp  Generation.h  Hydrology.cpp  Hydrology.h  SparseVoxelOctree.cpp  SparseVoxelOctree.h  TerrainPreset.cpp  TerrainPreset.h
src/physics/: AABB.cpp  AABB.h  PhysicsSystem.cpp  PhysicsSystem.h
src/threading/: ThreadPool.cpp  ThreadPool.h
